--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "GothamRnd-Book";
+  src: url("./fonts/GothamRounded-Book.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 .flex {
   display: flex;
 }
@@ -93,7 +100,6 @@
 
 /* Actual code */
 .questionName {
-  font-family: Montserrat;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -110,7 +116,6 @@
   margin-right: 8px !important;
 }
 .selectChoicesFont {
-  font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -452,7 +457,6 @@
 }
 
 .questionContent {
-  font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
@@ -463,7 +467,7 @@
 
 .solutionText {
   margin-bottom: 0.3rem;
-  font-family: Montserrat;
+
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -831,7 +835,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -878,7 +882,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -954,7 +958,7 @@
   width: auto;
 
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -1093,7 +1097,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -1484,7 +1488,7 @@
   max-width: Calc(50% - 0.4rem);
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -1617,7 +1621,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -2037,7 +2041,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -2596,7 +2600,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -2664,7 +2668,7 @@
 
   flex: 1;
   display: flex;
-  font-family: Montserrat;
+
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -2725,10 +2729,11 @@
 .bodyPage span,
 .bodyPage tr,
 .bodyPage td,
-.bodyPage th {
+.bodyPage th,
+.bodyPage p {
   /* H3 Desktop 18 pt */
 
-  font-family: "Montserrat" !important;
+  font-family: "GothamRnd-Book";
   font-style: normal !important;
   font-weight: 700 !important;
   font-size: 18px;
