--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -147,14 +147,14 @@
 
 .whitePage {
   background: white;
-  position: relative;
+
   width: calc(100% - 160px);
   margin: 0 auto;
   min-height: calc(100% - 46px);
   max-height: calc(100% - 46px);
   overflow: auto;
   clear: both;
-
+  z-index: 1;
   display: flex;
   flex-direction: column;
   border-radius: 24px;
@@ -261,7 +261,7 @@
 }
 
 .checkButton {
-  position: fixed;
+  position: static;
   z-index: 9;
 }
 
