--- a/TeacherOnlineQuiz/component/AllDisabledQuestion/OnlineQuiz.module.css
+++ b/TeacherOnlineQuiz/component/AllDisabledQuestion/OnlineQuiz.module.css
@@ -19,17 +19,16 @@
   min-height: 80px;
   flex-wrap: wrap;
   height: auto;
-  width:auto;
+  width: auto;
   gap: 2rem;
-  padding-right:1rem;
+  padding-right: 1rem;
   border: 1px solid black;
 }
-.choicesType > div:nth-child(2){
-  padding-right:1rem
+.choicesType > div:nth-child(2) {
+  padding-right: 1rem;
 }
 .selectedChoiceType {
   background-color: #b9c2fc;
-  
 }
 .wrongAnswer {
   color: red;
@@ -56,35 +55,29 @@
   border: 1px solid black;
 }
 
-.choiceTypeMultipleOption{
+.choiceTypeMultipleOption {
   width: 150px;
   height: 60px;
   gap: 0rem;
   border: 1px solid black;
   justify-content: center;
   display: flex;
-
-
 }
-.mainApp div{
-  margin:20px 0;
+.mainApp div {
+  margin: 20px 0;
 }
 
-.horizontalNotSymbols{
-flex-wrap: wrap;
-
+.horizontalNotSymbols {
+  flex-wrap: wrap;
 }
-.horizontalNotSymbols > div{
-  width:calc(40% - 2rem);
-  min-width:200px;
+.horizontalNotSymbols > div {
+  width: calc(40% - 2rem);
+  min-width: 200px;
   align-items: center;
-  
 }
-
 
 /* Actual code */
-.questionName{
-
+.questionName {
   font-family: Montserrat;
   font-size: 18px;
   font-style: normal;
@@ -94,37 +87,33 @@ flex-wrap: wrap;
   text-align: left;
   color: #233584;
   white-space: pre-wrap;
-
-  
 }
 
-.selectChoicesFont{
-font-family: Montserrat;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 24px;
-letter-spacing: 0em;
-text-align: left;
-align-items: center;
-padding-left:18px;
-color: #233584;
-border-radius: 12px;
-
+.selectChoicesFont {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  align-items: center;
+  padding-left: 18px;
+  color: #233584;
+  border-radius: 12px;
 }
-.bodyPage{
-  width:Calc(98% - 2rem);
-  margin:auto;
-  padding:1rem 0;
-position: relative;
+.bodyPage {
+  width: Calc(98% - 2rem);
+  margin: auto;
+  padding: 1rem 0;
+  position: relative;
   max-height: 80vh;
   overflow-y: auto;
 
-  height:80vh;
-  display:flex;
- border-radius: 5px;
-overflow-x: hidden;
-
+  height: 80vh;
+  display: flex;
+  border-radius: 5px;
+  overflow-x: hidden;
 }
 /* .whitePage{
   background: white;
@@ -155,153 +144,145 @@ border-radius: 24px;;
   position: absolute;
 } */
 
-
-.eclipse1{
+.eclipse1 {
   position: absolute;
-  top:14%;
-  left:3%;
-  width:8%;
-  height:7%;
+  top: 14%;
+  left: 3%;
+  width: 8%;
+  height: 7%;
 }
-.eclipseGreen{
-  height:12%;
+.eclipseGreen {
+  height: 12%;
   width: 13.25%;
-  left:7.75%;
-  bottom:1rem;
-  z-index:0;
+  left: 7.75%;
+  bottom: 1rem;
+  z-index: 0;
 }
-.polygon3{
- width:7%;
- top:10%;
- right:0;
+.polygon3 {
+  width: 7%;
+  top: 10%;
+  right: 0;
+}
 
+.whiteStar {
+  height: 6%;
+  width: 4%;
+  top: 47%;
+  left: 5%;
 }
-
-.whiteStar{
-  height:6%;
-  width:4%;
-  top:47%;
-  left:5%;
-}
-.Vector22{
-  width:14%;
+.Vector22 {
+  width: 14%;
   height: 27%;
-  bottom:5px;
-  left:79%;
+  bottom: 5px;
+  left: 79%;
 }
-.rectangle{
-  width:8%;
-  height:5%;
-  top:30%;
-  left:82.76%;
-}
-
-.star5{
-  width:4%;
-  height:7%;
-  
-  left:50%;
-  bottom:5%;
+.rectangle {
+  width: 8%;
+  height: 5%;
+  top: 30%;
+  left: 82.76%;
 }
 
-.border{
-  height:2px;
-  width:100%;
-  background-color: #EAEAEA;
-  margin-top:1rem;
-margin-bottom:1rem;
+.star5 {
+  width: 4%;
+  height: 7%;
+
+  left: 50%;
+  bottom: 5%;
+}
+
+.border {
+  height: 2px;
+  width: 100%;
+  background-color: #eaeaea;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   border-radius: 2px;
 }
-.border > div{
-  height:2px;
+.border > div {
+  height: 2px;
   background-color: green;
-width:20%;
+  width: 20%;
 }
 
-.boxChoices{
-  margin-Top: 0.5rem;
+.boxChoices {
+  margin-top: 0.5rem;
   cursor: pointer;
-  
-  
 }
 
-
-.checkButton{
-  width:100px;
+.checkButton {
+  width: 100px;
   background: blue !important;
-  height:40px;
-  color:white;
-  border-radius:20px;
-  position:fixed;
-  left:calc(100% - 100px);
-  margin-bottom:0.2rem;
-  top:5px;
- 
-  cursor: pointer;
+  height: 40px;
+  color: white;
+  border-radius: 20px;
+  position: fixed;
+  left: calc(100% - 100px);
+  margin-bottom: 0.2rem;
+  top: 5px;
 
+  cursor: pointer;
 }
-.selectCount{
-  background-color:orangered;
-  color:white;
-  width:30px;
-  height:30px;
-  display:flex;
+.selectCount {
+  background-color: orangered;
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin:0;
+  margin: 0;
   border-radius: 15px;
-  position:absolute;
-  left:77%;
-  top:18%;
+  position: absolute;
+  left: 77%;
+  top: 18%;
   cursor: pointer;
-  transform: translate(-77%,-18%);
+  transform: translate(-77%, -18%);
 }
-.imageBoxes{
-  position:relative;
+.imageBoxes {
+  position: relative;
   cursor: pointer;
 }
 
-.modal{
-  height:120px;
-  
-top:0px;
+.modal {
+  height: 120px;
 
-clear:both;
+  top: 0px;
 
+  clear: both;
 }
 
-.modalOuterBox{
-width:90%;
-position:absolute;
- z-index:99;
-height:auto;
-max-height: 100%;
-overflow-y: auto;
+.modalOuterBox {
+  width: 90%;
+  position: absolute;
+  z-index: 99;
+  height: auto;
+  max-height: 100%;
+  overflow-y: auto;
 
-bottom:0;
+  bottom: 0;
 }
-.modalButton{
-color:blue;
-background-color: white;
-width:auto;
-float:right;
-position: relative;
+.modalButton {
+  color: blue;
+  background-color: white;
+  width: auto;
+  float: right;
+  position: relative;
 
-height:35px;
+  height: 35px;
 
-font-family: Montserrat;
-font-size: 12px;
-font-style: normal;
-font-weight: 700;
-line-height: 15px;
-letter-spacing: 0em;
-text-align: center;
-box-sizing: border-box;
-z-index: 4;
-cursor: pointer;
-border: 1px solid #D3D8E3
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: center;
+  box-sizing: border-box;
+  z-index: 4;
+  cursor: pointer;
+  border: 1px solid #d3d8e3;
 }
-
 
 /* .modal2{
   position:relative;
@@ -313,32 +294,30 @@ height:auto;
   background-color: white;
 } */
 
-.green{
-  color: #6CAF20;
-  background: #CCEEA5;
+.green {
+  color: #6caf20;
+  background: #cceea5;
 }
-.red{
-  color: #EB5953;
-  background: #FAE0E0;
-  
+.red {
+  color: #eb5953;
+  background: #fae0e0;
+}
+.red > div:nth-child(1),
+.green > div:nth-child(1) {
+  margin: 2rem;
+  padding-top: 1rem;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+}
 
-}
-.red > div:nth-child(1),.green > div:nth-child(1){
-  margin:2rem;
-  padding-top:1rem;
-font-family: Montserrat;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: 27px;
-letter-spacing: 0em;
-text-align: left;
-}
-
-.solutionPage
-{
-  margin-left:2rem;
-  padding-top:1rem;
+.solutionPage {
+  margin-left: 2rem;
+  padding-top: 1rem;
 }
 
 /* @media only screen and (max-width:1290px)
@@ -384,59 +363,58 @@ text-align: left;
   }
 } */
 
-.modalsParent{
-  position:relative;
+.modalsParent {
+  position: relative;
   border-radius: 11px;
   font-family: Montserrat;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: 27px;
-letter-spacing: 0em;
-text-align: left;  
-height:100%;
-border-top:none;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  height: 100%;
+  border-top: none;
 }
 
 .choiceType2 {
   min-width: auto;
-  max-width:Calc((100% - 10px));
+  max-width: Calc((100% - 10px));
   min-height: auto;
-  width:60px;
+  width: 60px;
   flex-wrap: wrap;
   min-height: 60px;
-  height:auto;
-  padding:10px;
-  width:auto;
+  height: auto;
+  padding: 10px;
+  width: auto;
   gap: 2rem;
   word-break: break-word;
   border: 1px solid black;
-  cursor:pointer;
+  cursor: pointer;
 }
-
 
 /* style={{ backgroundColor: "indigo", color: "white", width: 'inherit', height: 'inherit', border: '1px solid indigo', borderRadius: "20px", display: 'flex', justifyContent: 'center', alignItems: 'center', cursor: 'pointer' }} */
 
-.DraggableBox{
-  width:inherit;
-  min-height:50px;
+.DraggableBox {
+  width: inherit;
+  min-height: 50px;
   height: auto;
   background-color: indigo;
-  color:white;
-  min-width:auto;
-  display:flex;
+  color: white;
+  min-width: auto;
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  border-radius:10px;
+  border-radius: 10px;
 }
 
-.bgIndigo{
+.bgIndigo {
   background-color: indigo;
-  color:white;
+  color: white;
 }
 
-.questionContent{
+.questionContent {
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -444,28 +422,24 @@ border-top:none;
   line-height: 27px;
   letter-spacing: 0em;
   text-align: left;
-  
-
-  
 }
 
-.solutionText{
-  margin-bottom:0.3rem;
-font-family: Montserrat;
-font-size: 22px;
-font-style: normal;
-font-weight: 700;
-line-height: 27px;
-letter-spacing: 0em;
-text-align: left;
-font-weight: bold;
-
+.solutionText {
+  margin-bottom: 0.3rem;
+  font-family: Montserrat;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  font-weight: bold;
 }
 
-.ckeditorQuestionName *{
+.ckeditorQuestionName * {
   white-space: initial !important;
 }
- /* @media only screen and (max-width:951px)
+/* @media only screen and (max-width:951px)
 {
   .bodyPage{
     width:90%;
@@ -479,290 +453,278 @@ font-weight: bold;
     
   }
 }  */
-.checkButton2{
-  width:100px;
+.checkButton2 {
+  width: 100px;
   background: blue !important;
-  height:40px;
-  color:white;
-  border-radius:20px;
-  
-  top:5px;
+  height: 40px;
+  color: white;
+  border-radius: 20px;
+
+  top: 5px;
   left: 86%;
-  margin:1rem;
-  float:right;
-  
+  margin: 1rem;
+  float: right;
+
   cursor: pointer;
 }
 
-.parentSolutionMargin{
-margin:1rem 0;
+.parentSolutionMargin {
+  margin: 1rem 0;
 }
 
-.paddingRightSolutionItem{
+.paddingRightSolutionItem {
   padding-right: 1rem;
 }
-.border2{
-  height:2px;
-  width:100%;
-  background-color: #EAEAEA;
-  margin:0;
+.border2 {
+  height: 2px;
+  width: 100%;
+  background-color: #eaeaea;
+  margin: 0;
   border-radius: 2px;
 }
-.border2 > div{
-  height:2px;
+.border2 > div {
+  height: 2px;
   background-color: green;
-width:20%;
+  width: 20%;
 }
-.border2{
-  height:2px;
-  width:100%;
-  background-color: #EAEAEA;
-  margin:0;
+.border2 {
+  height: 2px;
+  width: 100%;
+  background-color: #eaeaea;
+  margin: 0;
   border-radius: 2px;
 }
-.border3{
-  height:2px;
-  width:100%;
-  background-color: #EAEAEA;
-  margin-top:1rem;
+.border3 {
+  height: 2px;
+  width: 100%;
+  background-color: #eaeaea;
+  margin-top: 1rem;
   border-radius: 2px;
 }
-.border3 > div{
-  height:2px;
+.border3 > div {
+  height: 2px;
   background-color: green;
-width:20%;
-margin-bottom:1rem;
+  width: 20%;
+  margin-bottom: 1rem;
 }
 
-.border4{
-  height:2px;
-  width:100%;
-  background-color: #EAEAEA;
-  margin:1rem 0;
+.border4 {
+  height: 2px;
+  width: 100%;
+  background-color: #eaeaea;
+  margin: 1rem 0;
   border-radius: 2px;
 }
-.border4 > div{
-  height:2px;
+.border4 > div {
+  height: 2px;
   background-color: green;
-width:20%;
-margin-bottom:1rem;
+  width: 20%;
+  margin-bottom: 1rem;
 }
 
-.modalsParent2{
-  position:relative;
+.modalsParent2 {
+  position: relative;
   border-radius: 11px;
   font-family: Montserrat;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: 27px;
-letter-spacing: 0em;
-text-align: left;  
-border: 1px solid #D3D8E3;
-border-top:none;
-padding:0;
-margin:0;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  border: 1px solid #d3d8e3;
+  border-top: none;
+  padding: 0;
+  margin: 0;
 }
 
-.checkButton3{
-  width:100px;
-color:blue!important;
-width:auto;
-border:1px solid black;
-  padding:10px;
-  margin:1rem;
-  float:right;
-  border: 1px solid #D3D8E3;
+.checkButton3 {
+  width: 100px;
+  color: blue !important;
+  width: auto;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 1rem;
+  float: right;
+  border: 1px solid #d3d8e3;
   cursor: pointer;
   font-family: Montserrat;
-font-size: 12px;
-font-style: normal;
-font-weight: 700;
-line-height: 15px;
-letter-spacing: 0em;
-text-align: center;
-box-sizing: border-box;
-z-index: 4;
-cursor: pointer;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: center;
+  box-sizing: border-box;
+  z-index: 4;
+  cursor: pointer;
 }
 
 /* virtual Keyboard */
-#mathToolbarContainer{
-    
-  width:300px;
-  height:auto;
-  padding-bottom:1rem;
+#mathToolbarContainer {
+  width: 300px;
+  height: auto;
+  padding-bottom: 1rem;
   display: flex;
   flex-direction: column;
   background-color: gray;
   border-radius: 7px;
   position: fixed;
-  top:0px;
-  z-index:1;
+  top: 0px;
+  z-index: 1;
 }
 
 /* mathToolbarContainer */
-#mathToolbar{
-  width:300px;
-  margin:0 1rem;
-  display:grid;
+#mathToolbar {
+  width: 300px;
+  margin: 0 1rem;
+  display: grid;
   position: relative;
-  gap:1rem;
-  grid-template-columns: repeat(6,31px);
-  clear:both;
+  gap: 1rem;
+  grid-template-columns: repeat(6, 31px);
+  clear: both;
 }
-#mathToolbar > div{
- word-break: break;;
- height:30px;
- font-size:10px;
- display: flex;
- justify-content: center;
- align-items: center;
- border-radius: 5px;;
- background-color: white;
- cursor:pointer;
- 
+#mathToolbar > div {
+  word-break: break;
+  height: 30px;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
 }
-#tooltipTopBar{
-  color:white;
+#tooltipTopBar {
+  color: white;
 
-  cursor:pointer;
+  cursor: pointer;
 }
-.tooltipClose{
-  float:right;
-  margin-bottom:5px;
+.tooltipClose {
+  float: right;
+  margin-bottom: 5px;
   margin-right: 10px;
 }
-.modalBorder1{
-  border:2px solid black;
+.modalBorder1 {
+  border: 2px solid black;
 }
-.modalBorder2{
-  
-  border:2px solid black;
-  border-bottom:0px;
+.modalBorder2 {
+  border: 2px solid black;
+  border-bottom: 0px;
 }
-.MultipleChoicequestionName th,.MultipleChoicequestionName td{
-padding:1rem;
-}
-
-.bottomModal{
-  bottom:0;
-  height:0px;
-
-}
-.borderTopBottomMargin{
-  margin:1rem 0;
-}
-.marginTopborder3{
-  margin-top:1rem;
+.MultipleChoicequestionName th,
+.MultipleChoicequestionName td {
+  padding: 1rem;
 }
 
-.disabledTeacher{
+.bottomModal {
+  bottom: 0;
+  height: 0px;
+}
+.borderTopBottomMargin {
+  margin: 1rem 0;
+}
+.marginTopborder3 {
+  margin-top: 1rem;
+}
+
+.disabledTeacher {
   text-align: left;
-  margin-top:1rem;
-  font-size:20px;
+  margin-top: 1rem;
+  font-size: 20px;
 }
 
 /* NumberBond Select Choice */
-.NumberBondSelectChoiceFlexBox{
+.NumberBondSelectChoiceFlexBox {
   display: flex;
   align-items: center;
-}  
+}
 .NumberBondSelectChoiceFlexBox > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    min-height: 60px;
-    height: auto;
-    word-break: break-word;
-  }
-  .NumberBondSelectChoiceFlexBox * {
-    font-weight: 600;
-  }
-  .NumberBondSelectChoiceFlexBox input {
-    max-width: 50px;
-    width: 50;
-    min-height: 45px;
-    word-break: break-word;
-    text-align: center;
-  }
-
-.NumberBondSelectChoiceFlexBox2{
-display:flex;
-
-flex-wrap:wrap;
-gap:0.5rem;
-width:90%;
-margin-Top: 2.5rem;
-cursor: pointer;}
-.NumberBondSelectChoiceFlexBox2 > div{
-    min-width:80px;
-    max-width:auto;
-    
-    flex:1;
-    display:flex;
-font-family: Montserrat;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 24px;
-letter-spacing: 0em;
-text-align: left;
-align-items: center;
-padding-left:18px;
-color: #233584;
-border-radius: 12px;
-word-break:break;
-min-height: auto;
-height: 60px;
-
-gap: 2rem;
-
-border: 1px solid black;
-
-height:auto;
-min-width:Calc(50% - 0.5rem);
-max-width:Calc(50% - 0.5rem);
-
-
- 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  min-height: 60px;
+  height: auto;
+  word-break: break-word;
 }
-.NumberBondSelectChoiceFlexBox2 > div > div{
-    min-width:auto;
-    min-height:auto;
-
+.NumberBondSelectChoiceFlexBox * {
+  font-weight: 600;
 }
-.NumberBondSelectChoiceFlexBox2 > div > div:nth-child(2)
-{
-    flex: 1;
-    display:flex;
-  
-    flex-wrap:wrap;
-    word-break:break;
-   
-
-}
-.NumberBondSelectChoiceFlexBox2 .choiceImage{
-    padding:0;
+.NumberBondSelectChoiceFlexBox input {
+  max-width: 50px;
+  width: 50;
+  min-height: 45px;
+  word-break: break-word;
+  text-align: center;
 }
 
+.NumberBondSelectChoiceFlexBox2 {
+  display: flex;
 
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  width: 90%;
+  margin-top: 2.5rem;
+  cursor: pointer;
+}
+.NumberBondSelectChoiceFlexBox2 > div {
+  min-width: 80px;
+  max-width: auto;
+
+  flex: 1;
+  display: flex;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  align-items: center;
+  padding-left: 18px;
+  color: #233584;
+  border-radius: 12px;
+  word-break: break;
+  min-height: auto;
+  height: 60px;
+
+  gap: 2rem;
+
+  border: 1px solid black;
+
+  height: auto;
+  min-width: Calc(50% - 0.5rem);
+  max-width: Calc(50% - 0.5rem);
+}
+.NumberBondSelectChoiceFlexBox2 > div > div {
+  min-width: auto;
+  min-height: auto;
+}
+.NumberBondSelectChoiceFlexBox2 > div > div:nth-child(2) {
+  flex: 1;
+  display: flex;
+
+  flex-wrap: wrap;
+  word-break: break;
+}
+.NumberBondSelectChoiceFlexBox2 .choiceImage {
+  padding: 0;
+}
 
 /* vertical drag drop */
-.verticalDropVal{
-  width:50px;
-  height:50px;
+.verticalDropVal {
+  width: 50px;
+  height: 50px;
   border-radius: 25px;
 }
 
-
-.VerticalDragDropFlexBox{
+.VerticalDragDropFlexBox {
   display: flex;
   align-items: center;
-  gap:2rem;
-  width:100%;
-  flex-wrap:wrap;
+  gap: 2rem;
+  width: 100%;
+  flex-wrap: wrap;
 }
 .VerticalDragDropFlexBox > div {
   display: flex;
@@ -770,25 +732,25 @@ max-width:Calc(50% - 0.5rem);
   justify-content: center;
   width: 50px;
   height: 50px;
-  font-size:20px;
+  font-size: 20px;
 }
-.VerticalDragDropFlexBox2{
-display:flex;
-gap:1rem;
-margin-top:4rem;
+.VerticalDragDropFlexBox2 {
+  display: flex;
+  gap: 1rem;
+  margin-top: 4rem;
 }
-.VerticalDragDropFlexBox2 > div{
-  width:50px;
-  height:50px;
-  gap:1rem;
-  border-radius:25px;
-  color:white;
-  display:flex;
+.VerticalDragDropFlexBox2 > div {
+  width: 50px;
+  height: 50px;
+  gap: 1rem;
+  border-radius: 25px;
+  color: white;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 20px;
 }
-.circleResponse{
+.circleResponse {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -799,20 +761,20 @@ margin-top:4rem;
   display: flex;
   justify-content: center;
 }
-#fibAfterText{
-  width:calc(100% - 2rem);
-  margin:auto;
+#fibAfterText {
+  width: calc(100% - 2rem);
+  margin: auto;
   font-size: 16px !important;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-#mathZoneNextQuestion img{
-  width:auto !important;
-  }
-  #mathZoneNextQuestion{
-    white-space: pre-wrap;
-    }
-    #mathZoneNextQuestion .questionName{
-      width:auto !important;
-      }
+#mathZoneNextQuestion img {
+  width: auto !important;
+}
+#mathZoneNextQuestion {
+  white-space: pre-wrap;
+}
+#mathZoneNextQuestion .questionName {
+  width: auto !important;
+}
