--- a/mathzone.css
+++ b/mathzone.css
@@ -1057,3 +1057,12 @@ sup .fraction-root .fdn,
   position: static !important;
   padding-top: 0px !important;
 }
+
+#studentAnswerResponse img {
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
