--- a/NumberBond/NumberBond.module.css
+++ b/NumberBond/NumberBond.module.css
@@ -1,143 +1,129 @@
-.row{
-  
-    /* display:flex; */
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width:70%;
-    
+.row {
+  /* display:flex; */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
 }
-.row1{
-  
-    display:flex;
-    flex-direction:row;
-    align-items: center;
-    justify-content: center;
-    width:100%;
+.row1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
-.circle1{
-  
-    width:100%;
-    display:flex;
-    justify-content:center;
-    /* height:50px; */
-    /* width: 50px; */
+.circle1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  /* height:50px; */
+  /* width: 50px; */
 }
-.circle2{
-    
-    width:100%;
-    display:flex;
-    justify-content:center;
-    height:50px;
-
-    
-
+.circle2 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 50px;
 }
-.circles{
-    width:50px;
-    height:50px;
-    position: relative;
-    margin:auto;
-    border-radius: 50%;;
-    border:1px solid black;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.circles {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  margin: auto;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.root1{
-    width:100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.root1 {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.element{
-    width:100%;
-    display:flex;
-    justify-content: center;
+.element {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-.circles1{
-    width:50px;
-    height:50px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 50%;
-    position: relative;
+.circles1 {
+  width: 50px;
+  height: 50px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 50%;
+  position: relative;
 }
-.nodeChildren{
-    width:100%;
-  margin-top:1rem;
-    display:flex;
-    justify-content: center;
+.nodeChildren {
+  width: 100%;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  gap: 40px;
 }
-.nodeChildren > div{
-    width:50%;
-  
+.nodeChildren > div {
+  width: 50%;
 }
-.InputBox{
-width:45px;
-height:45px;
-border-radius: 50%;
-text-align: center;
-outline:0;;
-border:0;
-position: relative;
-    z-index:5;
-cursor:pointer;
-
+.InputBox {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  text-align: center;
+  outline: 0;
+  border: 0;
+  position: relative;
+  z-index: 5;
+  cursor: pointer;
 }
 
-.tree{
-    width:95%;
-    margin:auto;
-    position: relative;
-    margin-top:1rem;
-  
+.tree {
+  width: 95%;
+  margin: auto;
+  position: relative;
+  margin-top: 1rem;
+  max-width: 95%;
+  width: fit-content;
 }
-.bond{
-    position:absolute;
-    
-    
+.bond {
+  position: absolute;
 }
-.bond > div{
-    width:1px;
-    background-color: black;
-    height:150px;
-    position:absolute;
-
+.bond > div {
+  width: 1px;
+  background-color: black;
+  height: 150px;
+  position: absolute;
 }
 
-.leftBond{
-   
-    transform: rotate(75deg);
-    left:-110px;
-    top:-30px;
+.leftBond {
+  transform: rotate(75deg);
+  left: -110px;
+  top: -30px;
 }
-.rightBond{
-    transform: rotate(-45deg);
-    left:80px;
+.rightBond {
+  transform: rotate(-45deg);
+  left: 80px;
 }
 
-.fixed{
-    position: absolute;
-    top:0;
-    left:0;
-
+.fixed {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.point{
-    position:absolute;
-    width:0px;
-    height:0px;
- 
-
+.point {
+  position: absolute;
+  width: 0px;
+  height: 0px;
 }
-.top{
-    top:0;
+.top {
+  top: 0;
 }
-.bottom{
-    top:100%;
+.bottom {
+  top: 100%;
 }
 /* canvas{
     position: fixed;
@@ -146,24 +132,21 @@ cursor:pointer;
     z-index:-1;
 } */
 
+.tableFlex {
+  display: flex;
+  gap: 1rem;
+  width: fit-content;
 
-.tableFlex{
-   
-    display: flex;
-    gap:1rem;
-    width:fit-content;
-  
-    margin:auto;
+  margin: auto;
 }
-.tableFlex input{
-    width:40px;
-    height:40px;
-    
+.tableFlex input {
+  width: 40px;
+  height: 40px;
 }
-.tableFlex > div{
-width:40px;
-height:40px;
-display: flex;
-justify-content: center;
-align-items: center;
+.tableFlex > div {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
