--- a/mathzone.css
+++ b/mathzone.css
@@ -430,7 +430,20 @@ sup {
   letter-spacing: 3px;
   clear: both;
 }
-
+.rel-numbers {
+  position: relative;
+  float: left;
+  padding-bottom: 20px;
+}
+.border-abs {
+  position: absolute;
+  width: 50%;
+  height: 12px;
+  border: 1px solid gray;
+  left: 18%;
+  border-top: none;
+  bottom: 4px;
+}
 .top-underlined-root-number {
   display: inline-block;
   border-top: 2px solid #4d4d4d;
