--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -3118,13 +3118,17 @@
 .keyrow_2 {
   position: absolute;
   top: 48px;
-  left: 67px;
+  left: 76px;
   display: flex;
-  grid-gap: 44px;
-  gap: 48px;
+ gap:0px !important;
   justify-content: left;
 }
-
+.keyrow_2 td:nth-child(1){
+ display: none !important;
+}
+.keyrow_2 td{
+  padding-left: 63px;
+}
 .quizCorrectInorrect {
   font-family: "GothamRnd-Medium";
   clear: both;
@@ -3165,11 +3169,17 @@
 }
 .tdspace td:nth-last-child(1) {
   padding-left: 0 !important;
-  left: -10px;
+  left: -35px;
 }
 .tdspace td:nth-last-child(2) {
   padding-left: 0 !important;
 }
 .tdspace td:nth-child(1){
   left: 9px;
+}
+.tdspace_pd td:nth-child(1){
+  left: 9px;
+}
+.tdspace_pd td{
+  padding-left: 25px;
 }
