--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -3193,8 +3193,9 @@
 }
 
 .checkNumLine{
-  width: 25px;
-  margin:   15px 0;
+  width: 35px;
+  height: 20px;
+  margin: 15px 0;
 }
  .xline{
   display: flex;
@@ -3210,7 +3211,7 @@
   top:-15px;
   padding: 0 10px
 }
-.vertBar, .keyVertBar{
+.vertBar, .keyVertBar, .answeredVertBar{
 width:2px;
 background-color: black;
 height:20px;
@@ -3237,7 +3238,7 @@ padding: 4rem 0;
 margin: auto;
 }
 
-.selected{ 
+.selected, .ansSelected{ 
 border-radius:50%;
 background-color:blue;
 width:20px;
