--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -3200,8 +3200,8 @@ input::-webkit-inner-spin-button {
   /* width: 50px; */
   height: 30px; 
   min-width: 25px;
-  padding: 5px 0;
-  margin: 18px 0;
+  padding: 0;
+  margin:   0;
   font-family: "GothamRnd-Book2";
   font-style: normal;
   font-weight: 700;
@@ -3214,6 +3214,7 @@ input::-webkit-inner-spin-button {
  }
 .botline {
   border-bottom: 2px solid #888888;
+  width: -webkit-fill-available;
   /* margin-top: -9px; */
 }
 .arrowBotline{
@@ -3252,8 +3253,43 @@ border:1px solid #888888
   top:-6px   ;
   /* display:none; */
 }
-.mapBox{
-  margin: 20px 0; 
+.mapBox,.numMapBox{
+  margin: 6px 0; 
+}
+.numMapBox{
+  position: relative;
+  top: 10px;
+}
+#ansFracStart,#ansFracNum,#ansFracInt{
+  font-family: "GothamRnd-Book2";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+}
+.answerNum{
+  display: flex;
+  gap:5px;
+  align-items: center;
+  text-align: center;
+}
+.answerFrac{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap:2px;    
+}
+.qMark{
+  border:2px solid black;
+  margin: 3px 0; 
+  /* padding:   3px; 
+  height: 17px;
+  width: 17px; */
+  padding-top: 2px;
+  height: 28px;
+  width: 28px;
+
+  text-align: center;
 }
 .arrowLeft,.arrowRight{
   width: fit-content; 
@@ -3268,18 +3304,19 @@ border:1px solid #888888
   /* left: 30px; */
   left:2rem;
 }
-.ticktext{
+.ticktext, .answeredticktext{
   display: flex;
   flex-direction: column; 
   align-items: center;
   width: fit-content;
-  min-width: 40px;
+  /* min-width: 40px; */
   /* padding: 0 .5rem; */
 } 
 #horizontal_line{
 max-width: 100%;
 min-width: 10%;    
 display: flex;
+height: 20px;
 }
 .hori{ 
 display: flex; 
@@ -3302,10 +3339,13 @@ border:1px solid black;
   cursor: pointer;
   scale: 1.1;
 } */
-.section{
+.section, .answeredSection{
   margin: 0;
-  /* max-width: 125px;
-  min-width: 90px;  */
+  /* max-width: 125px; */
+  /* min-width: 50px;  */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section:hover {
