--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -3336,8 +3336,11 @@ height: 20px;
 .hori{ 
 display: flex; 
 /* justify-content:center; */
-width: 90%;
-padding: 4rem 0; 
+width: 100%;
+height: 175px;
+overflow-x: auto;
+overflow-y: hidden;
+padding: 6rem 0; 
 }
 
 .selected, .ansSelected{ 
