--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -3337,10 +3337,12 @@ height: 20px;
 display: flex; 
 /* justify-content:center; */
 width: 100%;
-height: 175px;
+height: fit-content;
+/* height: 175px; */
 overflow-x: auto;
 overflow-y: hidden;
-padding: 6rem 0; 
+/* padding: 6rem 0; 4rem 0 7rem 0 */
+padding:  4rem 0 7rem 0;
 }
 
 .selected, .ansSelected{ 
