--- a/mathzone.css
+++ b/mathzone.css
@@ -645,10 +645,15 @@ span.radicand .fraction-root {
 
 .nth-radical {
   position: relative;
+  padding-left: 6px;
+  margin-left: 8px;
 }
 
 .nth-radical .nth-root-new {
   line-height: 8px;
+  font-size: 13px;
+  left: -5px;
+  top: -4px;
 }
 
 .nth-radical .nth-root,
@@ -659,7 +664,8 @@ span.radicand .fraction-root {
 }
 
 .nth-radical .nth-root {
-  left: 3px;
+  left: -3px;
+  top: -3px;
 }
 
 .practice-new-quiz sup {
@@ -1184,6 +1190,10 @@ td.ldivision_left {
 
 .fraction .fdn {
   padding-top: 14px !important;
+}
+
+.explainiationContainer .fraction .fdn {
+  padding-top: 0 !important;
 }
 
 .fullscreensampleoneanimation {
