--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -1109,7 +1109,7 @@
   flex-wrap: wrap;
   gap: 0.5rem;
   width: 90%;
-  margin-top: 1.5rem;
+  margin-top: 20px;
   cursor: pointer;
 }
 
@@ -1303,6 +1303,7 @@
   display: flex;
   gap: 2rem;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .MatchObjectHorizontalTypeKeyingFlexBox3 > div {
@@ -2052,7 +2053,7 @@
   flex-wrap: wrap;
   gap: 0.5rem;
   width: 90%;
-  margin-top: 1.5rem;
+  margin-top: 20px;
   cursor: pointer;
 }
 
