--- a/TeacherOnlineQuiz/component/AllDisabledQuestion/OnlineQuiz.module.css
+++ b/TeacherOnlineQuiz/component/AllDisabledQuestion/OnlineQuiz.module.css
@@ -15,7 +15,7 @@
   flex-direction: column;
 }
 .choiceType {
-  min-width: Calc(43% - 2rem);
+  min-width: calc(43% - 32px);
   min-height: 80px;
   flex-wrap: wrap;
   height: auto;
