--- a/TeacherOnlineQuiz/component/AllDisabledQuestion/DisabledHorizontalFillUpsEquationType/DisabledHorizontalFillUpsEquationType.module.css
+++ b/TeacherOnlineQuiz/component/AllDisabledQuestion/DisabledHorizontalFillUpsEquationType/DisabledHorizontalFillUpsEquationType.module.css
@@ -19,7 +19,7 @@
 }
 
 .choiceType {
-  min-width: Calc(43% - 2rem);
+  min-width: calc(43% - 32px);
   min-height: auto;
   flex-wrap: wrap;
   height: 60px;
