--- a/HorizontalFillUpsEquationType/HorizontalFillUpsEquationType.module.css
+++ b/HorizontalFillUpsEquationType/HorizontalFillUpsEquationType.module.css
@@ -657,7 +657,7 @@
   width: 96%;
   margin: auto;
   margin-top: 1rem;
-  height: Calc(85vh - 1rem - 72px);
+  height: calc(85vh - 1rem - 72px);
   position: relative;
 }
 
@@ -705,19 +705,19 @@
 
 @media only screen and (max-width: 1202px) {
   .mainPage {
-    max-height: Calc(80.5vh - 1rem - 72px);
+    max-height: calc(80.5vh - 1rem - 72px);
   }
 }
 
 @media only screen and (max-width: 1102px) {
   .mainPage {
-    max-height: Calc(78.4vh - 1rem - 72px);
+    max-height: calc(78.4vh - 1rem - 72px);
   }
 }
 
 @media only screen and (max-width: 1002px) {
   .mainPage {
-    max-height: Calc(75.4vh - 1rem - 72px);
+    max-height: calc(75.4vh - 1rem - 72px);
   }
 }
 
@@ -801,8 +801,8 @@
 }
 
 .blockBaseFlexBoxSelection>div {
-  min-width: Calc(50% - 0.4rem);
-  max-width: Calc(50% - 0.4rem);
+  min-width: calc(50% - 0.4rem);
+  max-width: calc(50% - 0.4rem);
 
   flex: 1;
   display: flex;
@@ -853,8 +853,8 @@
 }
 
 .MultipleChoiceFlexBox>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
@@ -1053,8 +1053,8 @@
 }
 
 .CountOnTensframeSelectFlexBox>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
@@ -1443,8 +1443,8 @@
 }
 
 .CompareOfImagesSelectChoiceFlexBox>div {
-  min-width: Calc(50% - 0.4rem);
-  max-width: Calc(50% - 0.4rem);
+  min-width: calc(50% - 0.4rem);
+  max-width: calc(50% - 0.4rem);
   flex: 1;
   display: flex;
   font-family: Montserrat;
@@ -1580,8 +1580,8 @@
 }
 
 .CompareDragOperatorSelectChoiceFlexBox>div {
-  min-width: Calc(50% - 0.4rem);
-  max-width: Calc(50% - 0.4rem);
+  min-width: calc(50% - 0.4rem);
+  max-width: calc(50% - 0.4rem);
 
   flex: 1;
   display: flex;
@@ -1980,8 +1980,8 @@
 }
 
 .PlaceValueTableSelectTypeSelectChoiceFlexBox2>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
@@ -2514,8 +2514,8 @@
 }
 
 .NumberBondSelectChoiceFlexBox2>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
