--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -434,7 +434,7 @@
 
 .choiceType2 {
   min-width: auto;
-  max-width: Calc((100% - 10px));
+  max-width: calc((100% - 10px));
   min-height: auto;
   width: 60px;
   flex-wrap: wrap;
@@ -732,7 +732,7 @@
   display: block;
   justify-content: center;
   align-items: center;
-  position: relative;
+position: relative;
   z-index: 1;
 }
 
@@ -754,19 +754,19 @@
 
 /* @media only screen and (max-width: 1202px) {
     .mainPage {
-      max-height: Calc(80.5vh - 1rem - 72px);
+      max-height: calc(80.5vh - 1rem - 72px);
     }
   } */
 
 /* @media only screen and (max-width: 1102px) {
     .mainPage {
-      max-height: Calc(78.4vh - 1rem - 72px);
+      max-height: calc(78.4vh - 1rem - 72px);
     }
   } */
 
 /* @media only screen and (max-width: 1002px) {
     .mainPage {
-      max-height: Calc(75.4vh - 1rem - 72px);
+      max-height: calc(75.4vh - 1rem - 72px);
     } */
 
 @media only screen and (max-width: 819px) {
@@ -862,8 +862,8 @@
 }
 
 .blockBaseFlexBoxSelection>div {
-  min-width: Calc(50% - 0.4rem);
-  max-width: Calc(50% - 0.4rem);
+  min-width: calc(50% - 0.4rem);
+  max-width: calc(50% - 0.4rem);
 
   flex: 1;
   display: flex;
@@ -909,7 +909,7 @@
 }
 
 .MultipleChoiceFlexBox>div {
-  min-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
   max-width: 100%;
 
   flex: 1;
@@ -1124,8 +1124,8 @@
 }
 
 .CountOnTensframeSelectFlexBox>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
@@ -1519,8 +1519,8 @@
 }
 
 .CompareOfImagesSelectChoiceFlexBox>div {
-  min-width: Calc(50% - 0.4rem);
-  max-width: Calc(50% - 0.4rem);
+  min-width: calc(50% - 0.4rem);
+  max-width: calc(50% - 0.4rem);
   flex: 1;
   display: flex;
 
@@ -1651,8 +1651,8 @@
 }
 
 .CompareDragOperatorSelectChoiceFlexBox>div {
-  min-width: Calc(50% - 0.4rem);
-  max-width: Calc(50% - 0.4rem);
+  min-width: calc(50% - 0.4rem);
+  max-width: calc(50% - 0.4rem);
 
   flex: 1;
   display: flex;
@@ -2071,8 +2071,8 @@
 }
 
 .PlaceValueTableSelectTypeSelectChoiceFlexBox2>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
@@ -2625,8 +2625,8 @@
 }
 
 .NumberBondSelectChoiceFlexBox2>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
@@ -2693,8 +2693,8 @@
 }
 
 .multiSelectFlexBox>div {
-  min-width: Calc(50% - 0.5rem);
-  max-width: Calc(50% - 0.5rem);
+  min-width: calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
 
   flex: 1;
   display: flex;
