--- a/mathzone.css
+++ b/mathzone.css
@@ -1,4 +1,4 @@
-img {
+/* img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
@@ -143,7 +143,6 @@ img {
   font-family: MathJax_Size3;
 }
 
-/********** Ckeditor table with tr border *********/
 tr.ck-top-border td {
   border-top: thin solid black;
 }
@@ -505,7 +504,8 @@ sup {
 }
 
 .nth-radical .nth-root {
-  left: 3px;
+ left: 0;
+ font-size: 8px !important;
 }
 
 .main-math-function,
@@ -1351,4 +1351,4 @@ td.ldivision_left {
   -ms-transform: rotate(-20deg);
   -o-transform: rotate(-20deg);
   transform: rotate(-20deg);
-}
+} 
